--- a/poliedros.html
+++ b/poliedros.html
@@ -1,4 +1,5 @@
-="pt-BR">
+<!DOCTYPE html>
+<html langpt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
